fix: better visibility airline aircraft highlight

--- a/resources/sass/buttons.scss
+++ b/resources/sass/buttons.scss
@@ -9,7 +9,7 @@ button {
     }
 
     &.highlight{
-        border-bottom: 2px dotted $success;
+        border-bottom: 4px dotted $success;
     }
 }
 
